--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Triffid';
-  src: url('Triffid-VF.woff2') format('woff2');
+  src: url('TriffidVF.woff2') format('woff2');
 }
 
 body {
