--- a/style.css
+++ b/style.css
@@ -1,23 +1,73 @@
 @font-face {
   font-family: 'Triffid';
   src: url('TriffidVF.woff2') format('woff2');
+  font-weight: 100 900;
 }
 
 body {
-  background: black;
-  color: white;
-  font-family: 'Triffid', serif;
-  text-align: center;
+  margin: 0;
   padding: 2em;
+  background-color: #000;
+  color: #fff;
+  font-family: 'Triffid', sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
   font-size: 80px;
-  font-variation-settings: "wght" 400, "CRNV" 0;
+  line-height: 1.1;
   margin-bottom: 1em;
+  font-variation-settings: "wght" 400, "CRNV" 0;
+  transition: font-variation-settings 0.2s ease;
+  cursor: text;
+}
+
+.slider-group {
+  max-width: 600px;
+  width: 100%;
+  margin: 1.5em 0;
+}
+
+label {
+  display: block;
+  font-size: 1rem;
+  margin-bottom: 0.5em;
 }
 
 input[type="range"] {
-  width: 60%;
-  margin: 1em 0;
+  width: 100%;
+  appearance: none;
+  height: 6px;
+  background: #444;
+  border-radius: 4px;
+  outline: none;
+  margin-bottom: 1.5em;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.caption {
+  font-size: 0.9rem;
+  color: #aaa;
+  margin-top: 2em;
 }
