--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: 'TriffidCarnivore';
-  src: url('TriffidCarnivoreVF.woff2') format('woff2');
+  src: url('TriffidCarnVF.woff2') format('woff2');
 }
 
 body {
