--- a/style.css
+++ b/style.css
@@ -61,9 +61,11 @@ body {
   height: 300px;
   background: #111;
   color: #F5DFCE;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
   font-size: 80px;
   border-radius: 8px;
@@ -71,8 +73,11 @@ body {
   padding: 0.25em;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
   white-space: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .sample.weight {
@@ -115,4 +120,3 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 50%;
   cursor: pointer;
 }
-
